@@ -105,7 +105,7 @@ public class ReferencesPanel extends JPanel {
     if (refIndex == 0) {
       Color color = type.getBackgroundColor();
       return new LabelIcon(this, height, getBackground(),
-                           refs.size() > 1 ? ContainerUtil.newArrayList(color, color) : Collections.singletonList(color));
+                           refs.size() > 1 ? List.of(color, color) : Collections.singletonList(color));
     }
     return null;
   }
